Fixed bug
Fixed issue with the last column going off screen when dragging another column.

--- a/src/sass/components/_columns.sass
+++ b/src/sass/components/_columns.sass
@@ -1,5 +1,6 @@
 .column
     max-width: 100%
+    flex-basis: calc(100% / 3)
     &_container
         display: flex
         flex-direction: column
